# LGSO-SLAM

./: .gitignore  CMakeLists.txt
cfg/gaussian_mapper/Monocular/Replica/: replica_mono.yaml  replica_mono_0.yaml  replica_mono_500.yaml  room0.yaml  room1.yaml
cfg/gaussian_mapper/Monocular/TUM/: tum_freiburg1_desk.yaml  tum_freiburg2_xyz.yaml  tum_freiburg3_long_office_household.yaml
cuda_rasterizer/: auxiliary.h  backward.cu  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
dataloader/: SonarDataNew.py  data_utils.py
include/: Feature.h  Frame.h  LDSOCamera.h  Map.h  Point.h  camera.h  collection_adaptors.hpp  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_rasterizer.h  gaussian_renderer.h  gaussian_trainer.h  loss_utils.h  rasterize_points.h  segmentation.h
include/frontend/: FeatureDetector.h  FeatureMatcher.h  LoopClosing.h
include/internal/: PR.h
results/test-2/: replica_results.txt
src/: Feature.cpp  Frame.cpp  LDSOCamera.cpp  Map.cpp  Point.cpp  main_dso_pangolin.cpp  rerun_stub.hpp
src/FullSystem/: CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.cpp.bak  FullSystem.h  HessianBlocks.cpp  HessianBlocks.h  PixelSelector2.cpp
src/GS/: gaussian_mapper.cpp  gaussian_model.cpp  gaussian_parameters.cpp  gaussian_rasterizer.cpp  gaussian_renderer.cpp  rasterize_points.cu  segmentation.cu
src/IOWrapper/: ImageRW.h
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/frontend/: FeatureDetector.cpp  FeatureMatcher.cpp  LoopClosing.cpp
src/internal/: PR.cpp
src/loopclosing/: LoopClosingBridge.cpp  LoopClosingBridge.h
src/loopclosing/ldso/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  Camera.cpp  CoarseTracker.cpp  CoarseTracker.h  EnergyFunctional.h  Feature.cpp  FeatureDetector.cpp  FeatureDetector.h  FeatureMatcher.cpp  FeatureMatcher.h  Frame.cpp  FrameFramePrecalc.h  FrameHessian.cpp  FrameHessian.h  FullSystem.h  GlobalCalib.cpp  ImmaturePoint.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  NumTypes.h  PR.cpp  PR.h  Point.cpp  PointHessian.cpp  PointHessian.h  ResidualProjections.h  Residuals.h  SSE2NEON.h
src/util/: DatasetReader.h  FrameShell.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  PointXYZIndexBW.h  Undistort.cpp  Undistort.h  settings.cpp  settings.h
viewer/: drawer_utils.h  imgui_viewer.cpp  imgui_viewer.h  map_drawer.cpp  map_drawer.h
